# Penne

./: .coverage  .gitignore  404.html  LICENSE  README.md  README.rst  client.py  data.json  delegates.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sample_messages.json  server.py  sitemap.xml  test_client.py  test_plottyn.py  test_server_conformance.py
.github/workflows/: continuous_integration.yml  coverage.yml  python-package.yml  python-publish.yml  test.yml
api_reference/client/: index.html
api_reference/delegates/: index.html
api_reference/support_objects/: index.html
basic_usage/: index.html
client/: client.py  core.py  delegates.py  handlers.py  messages.py
contributing/: index.html
docs/: .pages  basic_usage.md  contributing.md  index.md  install.md  noodles.md
docs/api_reference/: .pages  client.md  delegates.md  support_objects.md
htmlcov/: d_a44f0ac069e85531_fixtures_py.html  d_a44f0ac069e85531_test_client_py.html  d_a44f0ac069e85531_test_core_py.html  d_a44f0ac069e85531_test_delegates_py.html  d_de7d54e3a3e61dca___init___py.html  d_de7d54e3a3e61dca_core_py.html  d_de7d54e3a3e61dca_delegates_py.html  d_de7d54e3a3e61dca_handlers_py.html  index.html  status.json
install/: index.html
noodles/: index.html
penne/: __init__.py  client.py  core.py  delegates.py  handlers.py  messages.py  noodle_objects.py
search/: search_index.json
tests/: base_server.py  clients.py  delegates.py  fixtures.py  plottyn_integration.py  requirements.txt  sample_messages.json  server_conformance.py  servers.py  test_client.py  test_core.py  test_delegates.py  test_handlers.py  test_integration.py
