[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "penne"
version = "0.0.1"
description = "Python Client for NOODLES protocol"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["noodles", "cbor", "Websockets"]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "asyncio",
    "websockets",
    "cbor2"
]